<resources>
    <string name="app_name">Heard Reality</string>
    <string name="action_user">User</string>
    <string name="action_settings">Params</string>
    <string name="login_title">Log In</string>
    <string name="login_email_placeholder">Email address</string>
    <string name="login_password_placeholder">Password</string>
    <string name="login_validate_button">Validate</string>
    <string name="login_no_account">No account?</string>
    <string name="login_signup_button">Sign Up</string>
    <string name="login_guest_button">Use as guest</string>
    <string name="login_error">Couldn\'t log you in with these details</string>
    <string name="missing_email">Email field is empty</string>
    <string name="missing_password">Password field is empty</string>
    <string name="signup_title">Sign up</string>
    <string name="signup_email_placeholder">Email address</string>
    <string name="signup_password_placeholder">Password</string>
    <string name="signup_confirm_placeholder">Confirm your password</string>
    <string name="signup_username_placeholder">Choose a username</string>
    <string name="signup_validate_button">Confirm</string>
    <string name="signup_cancel_button">Cancel</string>
    <string name="signup_wrong_match">Passwords don\'t match!</string>
    <string name="signup_error">An error occurred while creating the user</string>
    <string name="missing_confirm">Please confirm your password</string>
    <string name="missing_username">Please choose a username</string>
    <string name="duplicate_email">This email is already used</string>
    <string name="duplicate_username">This username is already used</string>
    <string name="upf_title">User Profile</string>
    <string name="upf_name">Username</string>
    <string name="upf_description">Description</string>
    <string name="upf_password_edit">Change your password :</string>
    <string name="ht_missing">No head-tracker connected</string>
    <string name="ht_connected">Connected to : %s</string>
    <string name="ht_connect">Scan</string>
    <string name="ht_config">Config</string>
    <string name="ht_config_title">Head-tracker configuration</string>
    <string name="ht_config_connection">Currently connected to : </string>
    <string name="ht_config_looking">You can check you are correctly calibrated here : </string>
    <string name="ht_config_elevation">Elevation</string>
    <string name="ht_config_orientation">Orientation</string>
    <string name="ht_config_calibrate">Calibrate</string>
    <string name="ht_config_disconnect">Disconnect</string>
    <string name="ht_calibration_title">Head-tracker calibration</string>
    <string name="ht_calibration_instructions">To calibrate the head-tracker, face North and keep your head straight then press \"Validate\". You can use the compass on your phone to identify the North.</string>
    <string name="ht_calibration_validate">Validate</string>
    <string name="allow_location_services">Location services are necessary for this application, please grant the permissions.</string>
    <string name="wmf_zoom">Zoom</string>
    <string name="wmf_list_title">HR Projects</string>
    <string name="wmf_list_all">All</string>
    <string name="wmf_list_downloaded">Downloaded</string>
    <string name="wmf_list_my_projects">My Projects</string>
    <string name="wmf_project_name_placeholder">Search for a project by name</string>
    <string name="wmf_by_owner">by %s</string>
    <string name="wmf_list_unpublished">Unpublished \</string>
    <string name="pdf_owner">By %s</string>
    <string name="pdf_location">Located in %s, %s</string>
    <string name="pdf_duration">~ %dm</string>
    <string name="pdf_genre">Genre : %s</string>
    <string name="pdf_description">Description : %s</string>
    <string name="pdf_downloads">%d downloads</string>
    <string name="pdf_download">Download</string>
    <string name="pdf_delete">Delete from disk</string>
    <string name="pdf_start">Start</string>
    <string name="ws_progress">%d%%</string>
    <string name="thingy_52">Thingy:52 </string>
    <string name="action_about">About</string>
    <string name="environment_current_conditions_title">Current Conditions</string>
    <string name="environment_service_title">Environment</string>
    <string name="configuration">Configuration</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="no_ble">Device doesn\'t support BLE!</string>
    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="not_available">n/a</string>
    <string name="scanner_subtitle_not_bonded">AVAILABLE DEVICES:</string>
    <string name="dev_name_info">Name your Thingy:52</string>
    <string name="dev_name_info_summary">Change the name of your Thingy:52 (optional).</string>
    <string name="connect_thingy_summary">Status: disconnected.</string>
    <string name="status_connected_to_device">Status: connected to %s.</string>
    <string name="device_name_hint">Thingy name</string>
    <string name="initial_configuration">Initial Configuration</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="get_started">GET STARTED</string>
    <string name="initial_setup_complete">Initial setup complete!</string>
    <string name="action_add">Add Thingy</string>
    <string name="no_thingy_connected_configuration">Please reconnect to %s to view the configuration</string>
    <string name="thingy_already_connected">Already connected to %s</string>
    <string name="no_thingy_connected_step_one">Please follow step 1 to proceed</string>
    <string name="connect_to_thingy">Connect to a Thingy</string>
    <string name="scan_thingy">Scan</string>
    <string name="disconnect_connect">Disconnect and scan</string>
    <string name="skip">Skip</string>
    <string name="environment_settings_cardview">ENVIRONMENT SETTINGS</string>
    <string name="having_troubles">Having troubles?</string>
    <string name="thing_url"><a href="https://www.nordicsemi.com/thingy">"https://www.nordicsemi.com/thingy"</a></string>
    <string name="privacy_policy_url"><a href="https://www.nordicsemi.com/eng/About-us/Privacy-Policy">"https://www.nordicsemi.com/eng/About-us/Privacy-Policy"</a></string>
    <string name="github_thingy_app_url"><a href="https://www.nordicsemi.com/eng/About-us/Privacy-Policy">"https://github.com/NordicSemiconductor/Android-Nordic-Thingy"</a></string>
    <string name="github_thingy_fw_url"><a href="https://github.com/NordicSemiconductor/Nordic-Thingy52-FW">"https://github.com/NordicSemiconductor/Nordic-Thingy52-FW"</a></string>
    <string name="environment_settings_title">Environment Settings</string>
    <string name="interval_temperature">Temperature interval</string>
    <string name="interval_pressure">Pressure interval</string>
    <string name="interval_humidity">Humidity interval</string>
    <string name="interval_color_intensity">Color intensity interval</string>
    <string name="air_quality_interval">Air quality interval</string>
    <string name="time">Time</string>
    <string name="frequency">Frequency</string>
    <string name="interval_pedometer">Pedometer interval</string>
    <string name="interval_temperature_compensation">Temp. compensation interval</string>
    <string name="interval_compass_compensation">Magnetometer compensation interval</string>
    <string name="interval_motion">Motion processing unit frequency</string>
    <string name="interval_wake_on_motion">Wake on motion</string>
    <string name="motion_freq_hz">Hz</string>
    <string name="time_unit_ms">ms</string>
    <string name="time_unit_s">s</string>
    <string name="degrees_2">%.2f°</string>
    <string name="interval_ms">%d ms</string>
    <string name="interval_s">%d s</string>
    <string name="interval_hz">%d Hz</string>
    <string name="adv_interval_formula">x 0.625 ms =</string>
    <string name="decimal_format_ms"> %.2f ms</string>
    <string name="conn_interval_formula">x 1.25 ms = </string>
    <string name="supervision_timeout_formula">x 10 ms = </string>
    <string name="led_percentage">%d%%</string>
    <string name="error_temp_interval">Interval must be between 100 – 60000 milliseconds.</string>
    <string name="error_pressure_interval">Interval must be between 50 – 60000 milliseconds.</string>
    <string name="error_humidity_interval">Interval must be between 100 – 60000 milliseconds.</string>
    <string name="error_color_intensity_interval">Interval must be between 200 – 60000 milliseconds.</string>
    <string name="error_color_interval">Color interval cannot be less than %d seconds.</string>
    <string name="error_temp_interval_empty">Temperature interval cannot be empty.</string>
    <string name="error_pressure_interval_empty">Pressure interval cannot be empty.</string>
    <string name="error_color_intensity_interval_empty">Color intensity interval cannot be empty.</string>
    <string name="error_humidity_interval_empty">Humidity interval cannot be empty.</string>
    <string name="error_pedometer_interval_empty">Pedometer interval cannot be empty.</string>
    <string name="error_compass_interval_empty">Compass interval cannot be empty.</string>
    <string name="error_motion_interval_empty">Motion frequency cannot be empty.</string>
    <string name="settings_basic_thingy">Thingy Settings</string>
    <string name="settings_thingy_name">Thingy name</string>
    <string name="settings_adv_param_char">Advertising parameters</string>
    <string name="settings_connection_param_char">Connection parameters</string>
    <string name="settings_eddystone_url">Eddystone URL</string>
    <string name="settings_cloud_token">Cloud token</string>
    <string name="settings_fw_version">Firmware version</string>
    <string name="settings_fw_version_title">Firmware Version</string>
    <string name="settings_environment">Environment Settings</string>
    <string name="settings_motion">Motion Settings</string>
    <string name="gas_mode_one">1 second</string>
    <string name="gas_mode_two">10 seconds</string>
    <string name="gas_mode_three">1 minute</string>
    <string name="min_connection_params_hint">Min. connection interval</string>
    <string name="max_connection_params_hint">Max. connection interval</string>
    <string name="slave_latency_hint">Slave latency</string>
    <string name="conn_sup_timeout_hint">Supervision timeout</string>
    <string name="url_hint">URL</string>
    <string name="ifttt_token_hint">IFTTT Token</string>
    <string name="error_ifttt_token_too_long">Cloud token must be between 1 – 100 bytes.</string>
    <string name="error_empty_device_name">Thingy name cannot be empty.</string>
    <string name="error_long_device_name">Thingy name cannot exceed more than 10 bytes.</string>
    <string name="error_empty_min_conn_interval">Min. connection interval cannot be empty.</string>
    <string name="error_empty_max_conn_interval">Max. connection interval cannot be empty.</string>
    <string name="error_empty_slave_latency">Slave latency cannot be empty.</string>
    <string name="error_empty_supervision_timeout">Supervision timeout cannot be empty.</string>
    <string name="error_uint16">Value does not match UINT16.</string>
    <string name="error_uint8">Value does not match UINT8.</string>
    <string name="error_configuring_char">Unable to configure characteristic.</string>
    <string name="error_invalid_conn_interval">Value must be within 7.5 and 4000 ms.</string>
    <string name="error_invalid_slave_latency">Value must be within 0 and 500.</string>
    <string name="error_invalid_supervision_timeout">Value must be within 100 and 32000 ms.</string>
    <string name="error_cloud_token_too_long">Cloud token cannot be longer than 250 bytes.</string>
</resources>