<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="300dp"
    android:layout_width="match_parent"
    android:fadeScrollbars="false"
    android:scrollbars="vertical"
    android:scrollbarStyle="insideOverlay">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/pdf_close"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:tint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_notify_cancel" />

        <TextView
            android:id="@+id/pdf_name"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pdf_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf_owner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pdf_name" />

        <ImageView
            android:id="@+id/pdf_location_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pdf_owner"
            app:srcCompat="@android:drawable/ic_dialog_map" />

        <TextView
            android:id="@+id/pdf_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/pdf_location"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/pdf_location_icon"
            app:layout_constraintStart_toEndOf="@+id/pdf_location_icon"
            app:layout_constraintTop_toTopOf="@+id/pdf_location_icon" />

        <ImageView
            android:id="@+id/pdf_duration_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@+id/pdf_duration"
            app:layout_constraintTop_toBottomOf="@+id/pdf_owner"
            app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

        <TextView
            android:id="@+id/pdf_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/pdf_duration"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/pdf_duration_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pdf_duration_icon" />

        <TextView
            android:id="@+id/pdf_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/pdf_genre"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pdf_location_icon" />

        <TextView
            android:id="@+id/pdf_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/pdf_description"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pdf_genre" />

        <TextView
            android:id="@+id/pdf_downloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/pdf_downloads"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pdf_description" />

        <Button
            android:id="@+id/pdf_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGrey"
            android:text="@string/pdf_download"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pdf_downloads"/>

        <Button
            android:id="@+id/pdf_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/lightGrey"
            android:text="@string/pdf_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pdf_downloads" />

        <Button
            android:id="@+id/pdf_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/lightGrey"
            android:text="@string/pdf_delete"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pdf_start" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
